// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CheckboxGroup /> should render with help text 1`] = `
.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 16px;
  height: 16px;
  border-width: 1.5px;
  border-style: solid;
  margin: 2px;
  border-radius: 2px;
  background-color: transparent;
  border-color: hsla(214,18%,69%,1);
}

.c10 {
  -webkit-animation: gYwSSW 150ms cubic-bezier(0.17,0,1,1);
  animation: gYwSSW 150ms cubic-bezier(0.17,0,1,1);
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  margin-bottom: 4px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0px;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c11 {
  margin-left: 4px;
}

.c13 {
  margin-left: 24px;
}

.c14 {
  margin-bottom: 0px;
}

.c15 {
  margin-top: 4px;
}

.c3 {
  color: hsla(217,18%,45%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.75rem;
  font-weight: 700;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1rem;
  margin: 0;
  padding: 0;
}

.c5 {
  color: hsla(217,56%,17%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  margin: 0;
  padding: 0;
}

.c12 {
  color: hsla(216,27%,36%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  margin: 0;
  padding: 0;
}

.c16 {
  color: hsla(216,16%,60%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.6875rem;
  font-weight: 400;
  font-style: italic;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1rem;
  margin: 0;
  padding: 0;
}

.c4 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: 0 -1px -1px 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
  white-space: nowrap;
  word-wrap: normal;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 2px;
  margin-bottom: 2px;
}

.c8 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: 0 -1px -1px 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
  white-space: nowrap;
  word-wrap: normal;
}

.c8:focus + div {
  outline: 1px solid white;
  box-shadow: 0px 0px 0px 4px hsla(218,89%,51%,0.18);
}

.c8:hover + div,
.c8:focus + div {
  border-color: hsla(214,18%,69%,1);
  background-color: hsla(216,44%,23%,0.09);
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-duration: 70ms;
  transition-duration: 70ms;
}

<div>
  <div
    aria-labelledby="checkbox-group-49-label-54"
    class="c0"
    display="flex"
    role="group"
  >
    <span
      id="checkbox-group-49-label-54"
      style="width: auto; flex-shrink: 0; margin-right: 16px; word-break: break-all;"
    >
      <div
        class="c1"
      >
        <div
          class="c2"
          display="flex"
        >
          <p
            class="c3 Text__StyledText-wkh56f-0"
            color="surface.text.subdued.lowContrast"
            font-family="text"
            font-size="75"
            font-style="normal"
            font-weight="bold"
          >
            Select fruits
            <div
              class="c4"
            >
              <p
                class="c5 Text__StyledText-wkh56f-0"
                color="surface.text.normal.lowContrast"
                font-family="text"
                font-size="100"
                font-style="normal"
                font-weight="regular"
              >
                , Select one
              </p>
            </div>
          </p>
        </div>
      </div>
    </span>
    <div
      class=""
    >
      <div
        class="c0"
        display="flex"
      >
        <div
          class="c1"
        >
          <div
            class=""
          >
            <label
              class="c6"
            >
              <div
                class="c0"
                display="flex"
              >
                <div
                  class="c7"
                  display="flex"
                >
                  <input
                    aria-checked="false"
                    aria-disabled="false"
                    aria-invalid="false"
                    aria-required="false"
                    class="c8"
                    role="checkbox"
                    type="checkbox"
                    value="apple"
                  />
                  <div
                    class="c9"
                  >
                    <div
                      class=""
                      style="opacity: 0; position: absolute; display: flex;"
                    >
                      <svg
                        aria-hidden="true"
                        fill="none"
                        height="12px"
                        viewBox="0 0 8 8"
                        width="12px"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M1.3335 3.99984C1.3335 3.81574 1.48273 3.6665 1.66683 3.6665H6.3335C6.51759 3.6665 6.66683 3.81574 6.66683 3.99984C6.66683 4.18393 6.51759 4.33317 6.3335 4.33317H1.66683C1.48273 4.33317 1.3335 4.18393 1.3335 3.99984Z"
                          fill="hsla(220, 27%, 98%, 1)"
                          fill-rule="evenodd"
                          stroke="white"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="0.5"
                        />
                      </svg>
                    </div>
                    <div
                      class="c10"
                      style="opacity: 0; position: absolute; display: flex;"
                    />
                  </div>
                  <div
                    class="c11"
                  />
                  <div
                    class="c12"
                    color="surface.text.subtle.lowContrast"
                    font-family="text"
                    font-size="100"
                    font-weight="regular"
                  >
                    Apple
                  </div>
                </div>
                <div
                  class="c13"
                />
              </div>
            </label>
          </div>
        </div>
        <div
          class="c1"
        >
          <div
            class=""
          >
            <label
              class="c6"
            >
              <div
                class="c0"
                display="flex"
              >
                <div
                  class="c7"
                  display="flex"
                >
                  <input
                    aria-checked="false"
                    aria-disabled="false"
                    aria-invalid="false"
                    aria-required="false"
                    class="c8"
                    role="checkbox"
                    type="checkbox"
                    value="mango"
                  />
                  <div
                    class="c9"
                  >
                    <div
                      class=""
                      style="opacity: 0; position: absolute; display: flex;"
                    >
                      <svg
                        aria-hidden="true"
                        fill="none"
                        height="12px"
                        viewBox="0 0 8 8"
                        width="12px"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M1.3335 3.99984C1.3335 3.81574 1.48273 3.6665 1.66683 3.6665H6.3335C6.51759 3.6665 6.66683 3.81574 6.66683 3.99984C6.66683 4.18393 6.51759 4.33317 6.3335 4.33317H1.66683C1.48273 4.33317 1.3335 4.18393 1.3335 3.99984Z"
                          fill="hsla(220, 27%, 98%, 1)"
                          fill-rule="evenodd"
                          stroke="white"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="0.5"
                        />
                      </svg>
                    </div>
                    <div
                      class="c10"
                      style="opacity: 0; position: absolute; display: flex;"
                    />
                  </div>
                  <div
                    class="c11"
                  />
                  <div
                    class="c12"
                    color="surface.text.subtle.lowContrast"
                    font-family="text"
                    font-size="100"
                    font-weight="regular"
                  >
                    Mango
                  </div>
                </div>
                <div
                  class="c13"
                />
              </div>
            </label>
          </div>
        </div>
        <div
          class="c14"
        >
          <div
            class=""
          >
            <label
              class="c6"
            >
              <div
                class="c0"
                display="flex"
              >
                <div
                  class="c7"
                  display="flex"
                >
                  <input
                    aria-checked="false"
                    aria-disabled="false"
                    aria-invalid="false"
                    aria-required="false"
                    class="c8"
                    role="checkbox"
                    type="checkbox"
                    value="orange"
                  />
                  <div
                    class="c9"
                  >
                    <div
                      class=""
                      style="opacity: 0; position: absolute; display: flex;"
                    >
                      <svg
                        aria-hidden="true"
                        fill="none"
                        height="12px"
                        viewBox="0 0 8 8"
                        width="12px"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M1.3335 3.99984C1.3335 3.81574 1.48273 3.6665 1.66683 3.6665H6.3335C6.51759 3.6665 6.66683 3.81574 6.66683 3.99984C6.66683 4.18393 6.51759 4.33317 6.3335 4.33317H1.66683C1.48273 4.33317 1.3335 4.18393 1.3335 3.99984Z"
                          fill="hsla(220, 27%, 98%, 1)"
                          fill-rule="evenodd"
                          stroke="white"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="0.5"
                        />
                      </svg>
                    </div>
                    <div
                      class="c10"
                      style="opacity: 0; position: absolute; display: flex;"
                    />
                  </div>
                  <div
                    class="c11"
                  />
                  <div
                    class="c12"
                    color="surface.text.subtle.lowContrast"
                    font-family="text"
                    font-size="100"
                    font-weight="regular"
                  >
                    Orange
                  </div>
                </div>
                <div
                  class="c13"
                />
              </div>
            </label>
          </div>
        </div>
      </div>
      <div
        class="c15"
      >
        <span
          style="display: flex; flex-direction: row; align-items: center; word-break: break-all;"
        >
          <span
            class="c16"
            color="surface.text.muted.lowContrast"
            font-family="text"
            font-size="50"
            font-style="italic"
          >
            Select one
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`<CheckboxGroup /> should render with label 1`] = `
.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 16px;
  height: 16px;
  border-width: 1.5px;
  border-style: solid;
  margin: 2px;
  border-radius: 2px;
  background-color: transparent;
  border-color: hsla(214,18%,69%,1);
}

.c10 {
  -webkit-animation: gYwSSW 150ms cubic-bezier(0.17,0,1,1);
  animation: gYwSSW 150ms cubic-bezier(0.17,0,1,1);
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  margin-bottom: 4px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0px;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c11 {
  margin-left: 4px;
}

.c13 {
  margin-left: 24px;
}

.c14 {
  margin-bottom: 0px;
}

.c3 {
  color: hsla(217,18%,45%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.75rem;
  font-weight: 700;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1rem;
  margin: 0;
  padding: 0;
}

.c5 {
  color: hsla(217,56%,17%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  margin: 0;
  padding: 0;
}

.c12 {
  color: hsla(216,27%,36%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  margin: 0;
  padding: 0;
}

.c4 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: 0 -1px -1px 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
  white-space: nowrap;
  word-wrap: normal;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 2px;
  margin-bottom: 2px;
}

.c8 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: 0 -1px -1px 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
  white-space: nowrap;
  word-wrap: normal;
}

.c8:focus + div {
  outline: 1px solid white;
  box-shadow: 0px 0px 0px 4px hsla(218,89%,51%,0.18);
}

.c8:hover + div,
.c8:focus + div {
  border-color: hsla(214,18%,69%,1);
  background-color: hsla(216,44%,23%,0.09);
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-duration: 70ms;
  transition-duration: 70ms;
}

<div>
  <div
    aria-labelledby="checkbox-group-19-label-24"
    class="c0"
    display="flex"
    role="group"
  >
    <span
      id="checkbox-group-19-label-24"
      style="width: auto; flex-shrink: 0; margin-right: 16px; word-break: break-all;"
    >
      <div
        class="c1"
      >
        <div
          class="c2"
          display="flex"
        >
          <p
            class="c3 Text__StyledText-wkh56f-0"
            color="surface.text.subdued.lowContrast"
            font-family="text"
            font-size="75"
            font-style="normal"
            font-weight="bold"
          >
            Select fruits
            <div
              class="c4"
            >
              <p
                class="c5 Text__StyledText-wkh56f-0"
                color="surface.text.normal.lowContrast"
                font-family="text"
                font-size="100"
                font-style="normal"
                font-weight="regular"
              >
                , 
              </p>
            </div>
          </p>
        </div>
      </div>
    </span>
    <div
      class=""
    >
      <div
        class="c0"
        display="flex"
      >
        <div
          class="c1"
        >
          <div
            class=""
          >
            <label
              class="c6"
            >
              <div
                class="c0"
                display="flex"
              >
                <div
                  class="c7"
                  display="flex"
                >
                  <input
                    aria-checked="false"
                    aria-disabled="false"
                    aria-invalid="false"
                    aria-required="false"
                    class="c8"
                    role="checkbox"
                    type="checkbox"
                    value="apple"
                  />
                  <div
                    class="c9"
                  >
                    <div
                      class=""
                      style="opacity: 0; position: absolute; display: flex;"
                    >
                      <svg
                        aria-hidden="true"
                        fill="none"
                        height="12px"
                        viewBox="0 0 8 8"
                        width="12px"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M1.3335 3.99984C1.3335 3.81574 1.48273 3.6665 1.66683 3.6665H6.3335C6.51759 3.6665 6.66683 3.81574 6.66683 3.99984C6.66683 4.18393 6.51759 4.33317 6.3335 4.33317H1.66683C1.48273 4.33317 1.3335 4.18393 1.3335 3.99984Z"
                          fill="hsla(220, 27%, 98%, 1)"
                          fill-rule="evenodd"
                          stroke="white"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="0.5"
                        />
                      </svg>
                    </div>
                    <div
                      class="c10"
                      style="opacity: 0; position: absolute; display: flex;"
                    />
                  </div>
                  <div
                    class="c11"
                  />
                  <div
                    class="c12"
                    color="surface.text.subtle.lowContrast"
                    font-family="text"
                    font-size="100"
                    font-weight="regular"
                  >
                    Apple
                  </div>
                </div>
                <div
                  class="c13"
                />
              </div>
            </label>
          </div>
        </div>
        <div
          class="c1"
        >
          <div
            class=""
          >
            <label
              class="c6"
            >
              <div
                class="c0"
                display="flex"
              >
                <div
                  class="c7"
                  display="flex"
                >
                  <input
                    aria-checked="false"
                    aria-disabled="false"
                    aria-invalid="false"
                    aria-required="false"
                    class="c8"
                    role="checkbox"
                    type="checkbox"
                    value="mango"
                  />
                  <div
                    class="c9"
                  >
                    <div
                      class=""
                      style="opacity: 0; position: absolute; display: flex;"
                    >
                      <svg
                        aria-hidden="true"
                        fill="none"
                        height="12px"
                        viewBox="0 0 8 8"
                        width="12px"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M1.3335 3.99984C1.3335 3.81574 1.48273 3.6665 1.66683 3.6665H6.3335C6.51759 3.6665 6.66683 3.81574 6.66683 3.99984C6.66683 4.18393 6.51759 4.33317 6.3335 4.33317H1.66683C1.48273 4.33317 1.3335 4.18393 1.3335 3.99984Z"
                          fill="hsla(220, 27%, 98%, 1)"
                          fill-rule="evenodd"
                          stroke="white"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="0.5"
                        />
                      </svg>
                    </div>
                    <div
                      class="c10"
                      style="opacity: 0; position: absolute; display: flex;"
                    />
                  </div>
                  <div
                    class="c11"
                  />
                  <div
                    class="c12"
                    color="surface.text.subtle.lowContrast"
                    font-family="text"
                    font-size="100"
                    font-weight="regular"
                  >
                    Mango
                  </div>
                </div>
                <div
                  class="c13"
                />
              </div>
            </label>
          </div>
        </div>
        <div
          class="c14"
        >
          <div
            class=""
          >
            <label
              class="c6"
            >
              <div
                class="c0"
                display="flex"
              >
                <div
                  class="c7"
                  display="flex"
                >
                  <input
                    aria-checked="false"
                    aria-disabled="false"
                    aria-invalid="false"
                    aria-required="false"
                    class="c8"
                    role="checkbox"
                    type="checkbox"
                    value="orange"
                  />
                  <div
                    class="c9"
                  >
                    <div
                      class=""
                      style="opacity: 0; position: absolute; display: flex;"
                    >
                      <svg
                        aria-hidden="true"
                        fill="none"
                        height="12px"
                        viewBox="0 0 8 8"
                        width="12px"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M1.3335 3.99984C1.3335 3.81574 1.48273 3.6665 1.66683 3.6665H6.3335C6.51759 3.6665 6.66683 3.81574 6.66683 3.99984C6.66683 4.18393 6.51759 4.33317 6.3335 4.33317H1.66683C1.48273 4.33317 1.3335 4.18393 1.3335 3.99984Z"
                          fill="hsla(220, 27%, 98%, 1)"
                          fill-rule="evenodd"
                          stroke="white"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="0.5"
                        />
                      </svg>
                    </div>
                    <div
                      class="c10"
                      style="opacity: 0; position: absolute; display: flex;"
                    />
                  </div>
                  <div
                    class="c11"
                  />
                  <div
                    class="c12"
                    color="surface.text.subtle.lowContrast"
                    font-family="text"
                    font-size="100"
                    font-weight="regular"
                  >
                    Orange
                  </div>
                </div>
                <div
                  class="c13"
                />
              </div>
            </label>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
